@@ -1,6 +1,8 @@
 package it.polimi.ingsw.am38.Controller;
 
+import it.polimi.ingsw.am38.Exception.GameNotFoundException;
 import it.polimi.ingsw.am38.Exception.NullNicknameException;
+import it.polimi.ingsw.am38.Exception.NumOfPlayersException;
 import it.polimi.ingsw.am38.Exception.TakenNicknameException;
 import it.polimi.ingsw.am38.Model.Game;
 import it.polimi.ingsw.am38.Model.Player;
@@ -22,13 +24,63 @@ public class LobbyManager {
      * list of all online Players
      */
     private final ArrayList<Player> players;
+    /**
+     * list of all active controllers, one per game
+     */
     private final ArrayList<GameController> gameControllers;
+    /**
+     * attribute used to manage each player when they join/reconnect to a game
+     */
     private Player player;
+    /**
+     * stores the next available ID for any next Game created, increased by 1 each time a
+     * gameController(=Game) is created
+     */
+    private int nextGameID = 0;
 
+    /**
+     * constructor of the LobbyManager class
+     */
     public LobbyManager() {
         games = new ArrayList<>();
         players = new ArrayList<>();
         gameControllers = new ArrayList<>();
+    }
+
+    /**
+     * creates a new Game given the number of Players, inserts it in the games list and creates a GameController,
+     * which will also be added to the list of ameControllers, assigns them a new gameID and updates the nextGameID
+     * so that there are no different Game instances with the same gameID
+     * @param numOfPlayers number of players allowed in this Game (from 2 to 4)
+     * @throws NumOfPlayersException if the numOfPlayers isn't between 2 and 4
+     */
+    public void createNewGame(int numOfPlayers) throws NumOfPlayersException{
+        if(numOfPlayers<2 || numOfPlayers>4)
+            throw new NumOfPlayersException("From 2 to 4 players can participate, try again!");
+        Game game = new Game(nextGameID, numOfPlayers);
+        games.add(game);
+        GameController gameController = new GameController(nextGameID, numOfPlayers);
+        gameControllers.add(gameController);
+        nextGameID++;
+    }
+    /*public Game getGame(int gameID) throws GameNotFoundException{
+        for(Game game:games)
+            if(game.getGameID() == gameID)
+                return game;
+        throw new GameNotFoundException("game" + gameID + "not found");
+    }*/
+
+    /**
+     * getter for the GameController of the Game which ID is the parameter gameID
+     * @param gameID ID of the Game managed by the GameController we want to get
+     * @return the GameController that manages the Game with gameID as his ID
+     * @throws GameNotFoundException if there's no active Game with the given gameID
+     */
+    public GameController getGameController(int gameID) throws GameNotFoundException{
+        for(GameController gameController:gameControllers)
+            if(gameController.getGame().getGameID() == gameID)
+                return gameController;
+        throw new GameNotFoundException("game" + gameID + "not found");
     }
 
     /**
@@ -51,7 +103,7 @@ public class LobbyManager {
             } else {
                 if (!players.get(players.indexOf(players
                         .stream().filter(u -> Objects.equals(u.getNickname(), nickname))
-                        .collect(Collectors.toList()).get(0))).getIsPlaying()) {
+                        .toList().getFirst())).getIsPlaying()) {
                     player = new Player(nickname);
                     //riconnessione alla partita
                 }
@@ -60,5 +112,13 @@ public class LobbyManager {
 
         }
         return player;
+    }
+
+    /**
+     * getter for the nextGameID attribute
+     * @return nextGameID
+     */
+    public int getNextGameID() {
+        return nextGameID;
     }
 }
